[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
name = "rocket-test-proj"
version = "0.1.0"

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
serde_derive = "1.0.8"
serde = "1.0.8"	
serde_json = "1.0.2"

[dependencies.rocket_contrib]
default-features = false
version = "0.2.8"
features = ["json", "tera_templates"]
